# libmygl

./: AUTHORS  CMakeLists.txt  Cosmology.cpp  Cosmology.h  Makefile  Makefile.in  README  README.md  config.h.in  configure  configure.ac  densityprofile.cpp  densityprofile.h  doxyfile  glellipse.cpp  glellipse.h  glshear.cpp  glshear.h  libmygl.tag  plane.cpp  planecreator.cpp  planecreator.h  shearimage.h  spl.cpp  spl.h
src/: Cosmology.cpp  Cosmology.h  Makefile.am  Makefile.in  densityprofile.cpp  densityprofile.h  glellipse.cpp  glellipse.h  glshear.cpp  glshear.h  glshear_spd.cpp  glshear_spd.h  mydaemon.cpp  plane.cpp  plane.h  plane_inst.cpp  plane_inst.h  planecreator.cpp  planecreator.h  shearimage.cpp  shearimage.h  spl.cpp  spl.h  structs.h  version.cpp.in  version.h
test/: Makefile.am  Makefile.in  test_planes.cpp
