lib_LIBRARIES = libmygl.a

libmygl_adir = $(libdir)
libmygl_a_CPPFLAGS = $(EASYBMP_CPPFLAGS) $(DNSTD_CPPFLAGS)
libmygl_a_SOURCES = Cosmology.cpp densityprofile.cpp glellipse.cpp shearimage.cpp plane.cpp planecreator.cpp spl.cpp glshear.cpp EasyBMP/EasyBMP.cpp
libmygl_a_includedir = $(includedir)/libmygl
libmygl_a_include_HEADERS = Cosmology.h densityprofile.h glellipse.h shearimage.h plane.h planecreator.h spl.h glshear.h EasyBMP/EasyBMP.h

