lib_LIBRARIES = libmygl.a

libmygl_adir = $(libdir)
libmygl_a_CPPFLAGS = $(EASYBMP_CPPFLAGS) $(DNSTD_CPPFLAGS)
libmygl_a_SOURCES = Cosmology.cpp densityprofile.cpp glellipse.cpp shearimage.cpp planecreator.cpp spl.cpp glshear.cpp EasyBMP/EasyBMP.cpp plane_inst.cpp
libmygl_a_includedir = $(includedir)/libmygl
nobase_libmygl_a_include_HEADERS = Cosmology.h densityprofile.h glellipse.h shearimage.h plane.h planecreator.h spl.h glshear.h plane_inst.h EasyBMP/EasyBMP.h EasyBMP/EasyBMP_BMP.h EasyBMP/EasyBMP_DataStructures.h  EasyBMP/EasyBMP_VariousBMPutilities.h